[company]feat: Assign developer to issue
